chore: exclude git stuff

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           redis-url: ${{ secrets.REDIS_URL }}
           redis-token: ${{ secrets.REDIS_TOKEN }}
+          exclusions: |
+            .git
+            .github
 
   build:
     needs: prepare
